--- a/src/Matsoft.MongoDB.csproj
+++ b/src/Matsoft.MongoDB.csproj
@@ -11,10 +11,18 @@
         <RepositoryUrl>https://github.com/assis402/Matsoft.MongoDB</RepositoryUrl>
         <PackageTags>MongoDB, Repository, Database</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
 
 </Project>
